--- a/app/src/main/res/layout/rv_episode_item.xml
+++ b/app/src/main/res/layout/rv_episode_item.xml
@@ -6,23 +6,24 @@
                 android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/episode_image"
         android:layout_width="112dp"
         android:layout_height="64dp"
+        android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/episode_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image"
+        android:layout_toRightOf="@id/episode_image"
         tools:text="Title"/>
 
     <TextView
-        android:id="@+id/sub_title"
+        android:id="@+id/episode_sub_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/image"
-        android:layout_toRightOf="@id/image"
+        android:layout_alignBottom="@id/episode_image"
+        android:layout_toRightOf="@id/episode_image"
         tools:text="sub title"/>
 </RelativeLayout>
